apollo-router/tests/snapshots/apollo_reports__invalid_enum_argument.snap
---
source: apollo-router/tests/apollo_reports.rs
expression: report
snapshot_kind: text
---
header:
  graph_ref: test
  hostname: "[hostname]"
  agent_version: "[agent_version]"
  service_version: ""
  runtime_version: rust
  uname: "[uname]"
  executable_schema_id: "[executable_schema_id]"
traces_per_query:
  "## GraphQLValidationFailure\n":
    trace: []
    stats_with_context:
      - context:
          client_name: ""
          client_version: ""
          operation_type: query
          operation_subtype: ""
          result: ""
        query_latency_stats:
          latency_count: "[latency_count]"
          request_count: 1
          cache_hits: 0
          persisted_query_hits: 0
          persisted_query_misses: 0
          cache_latency_count: "[cache_latency_count]"
          root_error_stats:
            children: {}
            errors_count: 0
            requests_with_errors_count: 0
          requests_with_errors_count: 1
          public_cache_ttl_count: "[public_cache_ttl_count]"
          private_cache_ttl_count: "[private_cache_ttl_count]"
          registered_operation_count: 0
          forbidden_operation_count: 0
          requests_without_field_instrumentation: 0
        per_type_stat: {}
        extended_references: ~
        local_per_type_stat: {}
        limits_stats:
          strategy: ""
          cost_estimated:
            - 0
          max_cost_estimated: 0
          cost_actual:
            - 0
          max_cost_actual: 0
          depth: 0
          height: 0
          alias_count: 0
          root_field_count: 0
        operation_count: 0
    referenced_fields_by_type: {}
    query_metadata: ~
end_time: "[end_time]"
operation_count: 0
operation_count_by_type: []
traces_pre_aggregated: true
extended_references_enabled: true
